tests/sksl/errors/ForInitStmt.dsl.glsl
### Compilation failed:

error: expected expression, but found 'for'
1 error
